--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,12 @@
           </includes>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M2</version>
+      </plugin>
     </plugins>
   </build>
+
 </project>
