--- a/pom.xml
+++ b/pom.xml
@@ -86,8 +86,8 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.18.1</version>
         <configuration>
-          <useFile>false</useFile>
-          <disableXmlReport>true</disableXmlReport>
+          <useFile>true</useFile>
+          <disableXmlReport>false</disableXmlReport>
           <!-- If you have classpath issue like NoDefClassError,... -->
           <!-- useManifestOnlyJar>false</useManifestOnlyJar -->
           <includes>
@@ -95,11 +95,6 @@
             <include>**/*Suite.*</include>
           </includes>
         </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M2</version>
       </plugin>
     </plugins>
   </build>
