--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -6,7 +6,9 @@ node {
       // Get the Maven tool.
       // ** NOTE: This 'M3' Maven tool must be configured
       // **       in the global configuration.           
-   
+       git branch: 'master',
+       credentialsId: 'f30cf8ec-04bd-4002-89ac-8aaeeb7a1df8',
+       url: 'https://gitlab.com/rortizrojo/tfm-spark.git'
    }
    stage('Build') {
       // Run the maven build
