--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -1,34 +1,49 @@
 node {
-   def mvnHome = tool 'M3'
-   stage('Preparation') { // for display purposes
-      // Get some code from a GitHub repository
-      // Get the Maven tool.
-      // ** NOTE: This 'M3' Maven tool must be configured
-      // **       in the global configuration.           
-       git branch: 'master',
-       credentialsId: 'f30cf8ec-04bd-4002-89ac-8aaeeb7a1df8',
-       url: 'https://gitlab.com/rortizrojo/tfm-spark.git'
-   }
-   stage('Build') {
-      // Run the maven build
-      withEnv(["MVN_HOME=$mvnHome"]) {
-         if (isUnix()) {
-            sh '"$MVN_HOME/bin/mvn" -Dmaven.test.failure.ignore clean package'
-         } else {
-            bat(/"%MVN_HOME%\bin\mvn" -Dmaven.test.failure.ignore clean package/)
-         }
-      }
-   }
-   stage('Creation Azure Storage'){
-     sh """
-       cd scripts/azure/storage/
-       ls -la
-       az login --service-principal -u http://ServiceTestJenkins --password 2366f72d-73e1-47f5-bedd-9b2ca47f9b82 --tenant 50140386-fd10-4b25-8169-e67b2b0b2017
-       ./deploy.sh -i 5a08e9e0-83ee-4188-8fc2-18e16c7db524 -g resourceGroupNuevo2 -n desplieguePrueba -l westeurope
-     """
-   }
-   stage('Results') {
-      junit '**/target/surefire-reports/TEST-*.xml'
-      archiveArtifacts 'target/*.jar'
-   }
+    def mvnHome = tool 'M3'
+    def nombre_cuenta = 'cuentaalmacenamientoazure'
+    def id_suscripcion = '5a08e9e0-83ee-4188-8fc2-18e16c7db524'
+    def grupo_recursos = 'grupoRecursosNuevo'
+
+
+    stage('Preparation') { // for display purposes
+        // Get some code from a GitHub repository
+        // Get the Maven tool.
+        // ** NOTE: This 'M3' Maven tool must be configured
+        // **       in the global configuration.
+        git branch: 'master',
+                credentialsId: 'f30cf8ec-04bd-4002-89ac-8aaeeb7a1df8',
+                url: 'https://gitlab.com/rortizrojo/tfm-spark.git'
+    }
+    stage('Build') {
+        // Run the maven build
+        withEnv(["MVN_HOME=$mvnHome"]) {
+            if (isUnix()) {
+                sh '"$MVN_HOME/bin/mvn" -Dmaven.test.failure.ignore clean package'
+            } else {
+                bat(/"%MVN_HOME%\bin\mvn" -Dmaven.test.failure.ignore clean package/)
+            }
+        }
+    }
+    stage('Creation Azure Storage'){
+        sh
+        """
+            cd scripts/azure/storage/
+            ls -la
+            az login --service-principal -u http://ServiceTestJenkins --password 2366f72d-73e1-47f5-bedd-9b2ca47f9b82 --tenant 50140386-fd10-4b25-8169-e67b2b0b2017
+            ./deploy.sh -i ${id_suscripcion} -g ${grupo_recursos} -n desplieguePrueba -l westeurope
+        """
+    }
+    stage('Subida de fichero'){
+        sh
+        """
+            cd scripts/azure/storage/
+            ls -la
+            az login --service-principal -u http://ServiceTestJenkins --password 2366f72d-73e1-47f5-bedd-9b2ca47f9b82 --tenant 50140386-fd10-4b25-8169-e67b2b0b2017
+            ./deploy.sh -i ${id_suscripcion} -g ${grupo_recursos} -n desplieguePrueba -l westeurope
+        """
+    }
+    stage('Results') {
+        junit '**/target/surefire-reports/TEST-*.xml'
+        archiveArtifacts 'target/*.jar'
+    }
 }
