--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -34,10 +34,11 @@ node {
     }
     stage('Subida de fichero'){
         sh """
+            az storage account keys list --account-name ${nombre_cuenta} > ficheroKeys
+            keyStorage = python3 parserKeyStorage.py ficheroKeys
             cd scripts/azure/storage/
-            ls -la
-            az login --service-principal -u http://ServiceTestJenkins --password 2366f72d-73e1-47f5-bedd-9b2ca47f9b82 --tenant 50140386-fd10-4b25-8169-e67b2b0b2017
-            ./deploy.sh -i ${id_suscripcion} -g ${grupo_recursos} -n desplieguePrueba -l westeurope
+            ./upload.sh keyStorage
+
         """
     }
     stage('Results') {
