--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -35,7 +35,8 @@ node {
 
         sh """
             az storage account keys list --account-name ${nombre_cuenta} > ficheroKeys
-            keyStorage=$(python3 parserKeyStorage.py ficheroKeys)
+            keyStorage=\$(python3 parserKeyStorage.py ficheroKeys)
+
             cd scripts/azure/storage/
             ./upload.sh ${nombre_cuenta} keyStorage
         """
