Añadido fichero python para la obtención de la clave de almacenamiento

--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -34,6 +34,7 @@ node {
     stage('Subida de fichero'){
 
         sh """
+            cd scripts/azure/storage/
             az storage account keys list --account-name ${nombre_cuenta} > ficheroKeys
             keyStorage=\$(python3 parserKeyStorage.py ficheroKeys)
 
