Modificado id de credenciales

--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -11,7 +11,7 @@ node {
         // ** NOTE: This 'M3' Maven tool must be configured
         // **       in the global configuration.
         git branch: 'master',
-        credentialsId: 'gitlab-api-token',
+        credentialsId: '518756c3-6847-492c-b641-3f1e0bd59647',
         url: 'https://gitlab.com/rortizrojo/tfm-spark.git'
     }
     stage('Build') {
