Corregido Id Credentials en Jenkins

--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -36,7 +36,7 @@ node {
         sh """
             cd scripts/azure/storage/
             az storage account keys list --account-name ${nombre_cuenta} > ficheroKeys
-            keyStorage=\$(python3 parserKeyStorage.py ficheroKeys)
+            keyStorage=$(python3 parserKeyStorage.py ficheroKeys)
             echo ${nombre_cuenta}
             echo $keyStorage
             ./upload.sh ${nombre_cuenta} $keyStorage
