--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -11,8 +11,8 @@ node {
         // ** NOTE: This 'M3' Maven tool must be configured
         // **       in the global configuration.
         git branch: 'master',
-        credentialsId: 'f30cf8ec-04bd-4002-89ac-8aaeeb7a1df8',
-        url: 'https://gitlab.com/rortizrojo/tfm-spark.git'
+                credentialsId: 'f30cf8ec-04bd-4002-89ac-8aaeeb7a1df8',
+                url: 'https://gitlab.com/rortizrojo/tfm-spark.git'
     }
     stage('Build') {
         // Run the maven build
@@ -36,9 +36,9 @@ node {
         sh """
             cd scripts/azure/storage/
             az storage account keys list --account-name ${nombre_cuenta} > ficheroKeys
-            keyStorage=$(python3 parserKeyStorage.py ficheroKeys)
-            echo ${nombre_cuenta}
-            echo $keyStorage
+            keyStorage=\$(python3 parserKeyStorage.py ficheroKeys)
+            echo "Nombre Cuenta: ${nombre_cuenta}"
+            echo "KeyStorage: $keyStorage"
             ./upload.sh ${nombre_cuenta} $keyStorage
         """
     }
