--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -35,6 +35,11 @@ node {
         sh """
             cd scripts/azure/storage/
             ls -la
+            az storage account keys list --account-name ${nombre_cuenta} > ficheroKeys
+            keyStorage=\$(python3 parserKeyStorage.py ficheroKeys)
+            echo "Nombre Cuenta: ${nombre_cuenta}"
+            echo "KeyStorage: $keyStorage"
+            ./upload.sh ${nombre_cuenta} $keyStorage
         """
     }
     stage('Results') {
