--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -37,7 +37,7 @@ node {
             ls -la
             az storage account keys list --account-name $nombre_cuenta > ficheroKeys
             cat ficheroKeys
-            prueba=\$(python3 parserKeyStorage.py ficheroKeys)
+            prueba=`python3 parserKeyStorage.py ficheroKeys`
             echo "Nombre Cuenta: $nombre_cuenta"
             echo "KeyStorage: $prueba"
         """
