--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -14,16 +14,16 @@ node {
                 credentialsId: 'f30cf8ec-04bd-4002-89ac-8aaeeb7a1df8',
                 url: 'https://gitlab.com/rortizrojo/tfm-spark.git'
     }
-//    stage('Build') {
-//        // Run the maven build
-//        withEnv(["MVN_HOME=$mvnHome"]) {
-//            if (isUnix()) {
-//                sh '"$MVN_HOME/bin/mvn" -Dmaven.test.failure.ignore clean package'
-//            } else {
-//                bat(/"%MVN_HOME%\bin\mvn" -Dmaven.test.failure.ignore clean package/)
-//            }
-//        }
-//    }
+    stage('Build') {
+        // Run the maven build
+        withEnv(["MVN_HOME=$mvnHome"]) {
+            if (isUnix()) {
+                sh '"$MVN_HOME/bin/mvn" -Dmaven.test.failure.ignore clean package'
+            } else {
+                bat(/"%MVN_HOME%\bin\mvn" -Dmaven.test.failure.ignore clean package/)
+            }
+        }
+    }
     stage('Creation Azure Storage'){
         sh """
             cd scripts/azure/storage/
