Solucionado formato fecha cuando se genera el token sas. Modificado script upload.sh para recibir por parámetro la ruta del fichero a subir y la ruta en el contenedor

--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -40,7 +40,7 @@ node {
             keyStorage=`python3 parserKeyStorage.py ficheroKeys`
             echo "Nombre Cuenta: $nombre_cuenta"
             echo "KeyStorage: \$keyStorage"
-            ./upload.sh $nombre_cuenta \$keyStorage
+            ./upload.sh $nombre_cuenta \$keyStorage ../../../input/MuestraDatos.csv muestraSubido.csv
         """
     }
     stage('Results') {
