--- a/scripts/jenkins/Jenkinsfile
+++ b/scripts/jenkins/Jenkinsfile
@@ -46,8 +46,8 @@ node {
     stage('Creación del cluster'){
         sh """
             cd scripts/azure/cluster/
-            keyStorage=`python3 parserKeyStorage.py ficheroKeys`
-            ./deploy.sh -i ${id_suscripcion} -g ${grupo_recursos} -n desplieguePrueba -l westeurope
+            //keyStorage=`python3 parserKeyStorage.py ficheroKeys`
+            //./deploy.sh -i ${id_suscripcion} -g ${grupo_recursos} -n desplieguePrueba -l westeurope
         """
     }
 
