--- a/pom.xml
+++ b/pom.xml
@@ -73,15 +73,29 @@
     <dependency>
       <groupId>org.scalatest</groupId>
       <artifactId>scalatest_${scala.compat.version}</artifactId>
-      <version>2.2.4</version>
+      <version>3.0.8</version>
       <scope>test</scope>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.scalatest</groupId>-->
+<!--      <artifactId>scalatest_${scala.compat.version}</artifactId>-->
+<!--      <version>2.2.4</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.specs2</groupId>
       <artifactId>specs2-junit_${scala.compat.version}</artifactId>
       <version>2.4.16</version>
       <scope>test</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.holdenkarau/spark-testing-base -->
+    <dependency>
+      <groupId>com.holdenkarau</groupId>
+      <artifactId>spark-testing-base_2.11</artifactId>
+      <version>2.4.3_0.12.0</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
