--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <scala.version>2.11.5</scala.version>
     <spark.version>2.3.0</spark.version>
     <scala.compat.version>2.11</scala.compat.version>
+    <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
   </properties>
 
   <dependencies>
@@ -64,6 +65,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.scala-tools.testing</groupId>-->
+<!--      <artifactId>specs_${scala.compat.version}</artifactId>-->
+<!--      <version>1.6.5</version>-->
+<!--      <scope>test</scope>-->
+<!--    </dependency>-->
     <dependency>
       <groupId>org.specs2</groupId>
       <artifactId>specs2-core_${scala.compat.version}</artifactId>
@@ -102,6 +109,7 @@
     <sourceDirectory>src/main/scala</sourceDirectory>
     <testSourceDirectory>src/test/scala</testSourceDirectory>
     <plugins>
+
       <plugin>
         <!-- see http://davidb.github.com/scala-maven-plugin -->
         <groupId>net.alchim31.maven</groupId>
@@ -126,7 +134,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.18.1</version>
+        <version>${maven-surefire-plugin.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.maven.surefire</groupId>
+            <artifactId>surefire-junit47</artifactId>
+            <version>${maven-surefire-plugin.version}</version>
+          </dependency>
+        </dependencies>
         <configuration>
           <useFile>true</useFile>
           <disableXmlReport>false</disableXmlReport>
@@ -135,6 +150,7 @@
           <includes>
             <include>**/*Test.*</include>
             <include>**/*Suite.*</include>
+            <include>**/*Specification.*</include>
           </includes>
         </configuration>
       </plugin>
