--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
 
 target/
+input/
+output/
+metastore_db/
 lib_managed/
 src_managed/
 project/boot/
